--- a/cargo-delivery/css/main.css
+++ b/cargo-delivery/css/main.css
@@ -293,9 +293,186 @@ section .content-banner p {
 
 .truck-car {
     position: absolute;
+    left: 61%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%)
 }
+
+
+.container{
+    /*width: max-content;*/
+    max-width: 1105px;
+    width: 100%;
+    /*height: 300px;*/
+    margin: 0 auto;
+}
+.about-company-and-services {
+    background-color: #2F343A;
+}
+.elem-service {
+        color: white;
+        font-size: 20px;
+        border: 1px solid #2F343A;
+        width: 270px;
+        height: 180px;
+    background-color: #393F47;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /*background-image: url("../image/airplan-light.png");*/
+    /*background-repeat:no-repeat;*/
+    /*background-position: center;*/
+
+}
+.bg_icon {
+    width: 30px;
+    height: 30px;
+    background-image: url("../image/airplan-light.png");
+    background-repeat:no-repeat;
+    background-position: center;
+    z-index: 11;
+
+}
+
+.about-company-and-services hr {
+    border: 2px solid #C8A35F;
+    border-radius: 10px;
+    width: 90px;
+    display: inline-block;
+    margin-bottom: 40px;
+}
+.elem-service span {
+    font-family: Roboto, 'sans-serif';
+    font-weight: 500;
+    font-style: normal;
+    font-size: 18px;
+    color: white;
+    margin-top: 20px;
+    text-transform: uppercase;
+}
+
+.circle {
+    background-color: #393F47;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    z-index: 10;
+}
+
+.elem-service:hover .bg_icon {
+    width: 30px;
+    height: 30px;
+    background-image: url("../image/airplane-dark.png");
+}
+
+.elem-service:hover .circle {
+    background-color: white;
+}
+
+.elem-service:hover{
+    background-color: #f3ce70;
+    cursor: pointer;
+}
+
+.about-company-and-services .services {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 70px;
+
+}
+.about-company-and-services .choose-service {
+    display: flex;
+    justify-content: center;
+}
+.about-company-and-services .choose-service2 {
+    display: flex;
+    justify-content: center;
+}
+
+.about-company-and-services .services h2{
+    color: #FFFFFF;
+    font-family: Roboto, 'sans-serif';
+    font-weight: 700;
+    font-style: normal;
+    font-size: 2.5rem;
+    width: 16%;
+    text-transform: uppercase;
+
+}
+
+.about-company {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 60px;
+}
+.info-company h2{
+    color: #FFFFFF;
+    font-family: Roboto, 'sans-serif';
+    font-weight: 700;
+    font-style: normal;
+    font-size: 2.5rem;
+    width: 16%;
+    text-transform: uppercase;
+    white-space: nowrap;
+}
+.info-company p{
+    color: #FFFFFF;
+    font-family: Roboto, 'sans-serif';
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+    text-transform: uppercase;
+
+}
+.block{
+    /*width: 200px;*/
+    /*height: 160px;*/
+    /*border: 2px solid green;*/
+}
+/*.info-company {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*}*/
+.summary-company {
+    display: flex;
+}
+
 @media (max-width: 830px) {
 section .content-banner h1 {
     font-size: 	2rem;
 }
+    .truck-car img{
+        width: 350px;
+        height: 220px;
+    }
+    .truck-car {
+        position: absolute;
+        left: 40%;
+        -webkit-transform: translateX(-50%);
+        transform: translateY(20%);
+    }
+
+}
+@media (max-width: 680px) {
+    section  .content-banner h1 {
+        font-size: 1.3rem;
+    }
+    .content-first-block h2 {
+        font-size: 1.4rem;
+    }
+    .truck-car {
+        position: absolute;
+        left: 34%;
+        -webkit-transform: translateX(-50%);
+        transform: translateY(33%);
+    }
+    .truck-car img{
+        width: 300px;
+        height: 180px;
+    }
 }
